--- a/web/packages/web/src/presentation/MainLayout.module.css
+++ b/web/packages/web/src/presentation/MainLayout.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  height: 100dvh;
+  height: calc(var(--vh, 1dvh) * 100);
 }
 
 .content {
